[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal64"
description = "N64 Dumb Terminal"
readme = "README.md"
version = "0.1.0"
license = "MIT"
authors = [
    {name = "Jeff Kent", email = "jeff@jkent.net"},
]
maintainers = [
    {name = "Jeff Kent", email = "jeff@jkent.net"},
]
requires-python = ">= 3.11.2"
dependencies = [
    "bitstring >= 4.3.1",
    "click >= 8.2.1",
    "pyserial >= 3.5",
]

[project.scripts]
pong = "terminal64.games:pong.main"
tile_demo = "terminal64:tile_demo.main"

