[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal64"
description = "N64 Dumb Terminal"
readme = "README.md"
version = "0.1.0"
license = "MIT"
authors = [
    {name = "Jeff Kent", email = "jeff@jkent.net"},
]
maintainers = [
    {name = "Jeff Kent", email = "jeff@jkent.net"},
]
requires-python = ">= 3.11.2"
dependencies = [
    "bitstring >= 4.3.1",
    "click >= 8.2.1",
    "json_delta >= 2.0.2",
    "pyserial-asyncio >= 0.6",
]

[project.scripts]
netpong = "terminal64:netpong.main"
pong = "terminal64:pong.main"
server = "terminal64:server.main"
sprite_demo = "terminal64:sprite_demo.main"
